# RC-computer-control-system

./: README.md  bachelor_car_menu_design.ui  pyproject.toml
rc_management_gui/: __init__.py  abstract_storage.py  db_handler.py  main_window_ui.py  socket_client.py
tests/: test_python_script.py
